--- a/book-format-service-dev.properties
+++ b/book-format-service-dev.properties
@@ -1,6 +1,7 @@
 spring.application.name=book-format-service
-server.port=8081
+server.port=8082
 
+feign.client.config.default.readTiemout=2000
 
 spring.datasource.url=jdbc:mysql://localhost:3306/Lab606?serverTimezone=UTC
 spring.datasource.username=ironhacker
